index finger added - wrist updated by clean the window and bugs and readme file updated

--- a/Handwriting recognition by wrist/capture_image_with_wrist.ipynb
+++ b/Handwriting recognition by wrist/capture_image_with_wrist.ipynb
@@ -367,27 +367,34 @@
     "\n",
     "            # Draw wrist positions\n",
     "            for pos in left_wrist_positions:\n",
-    "                cv2.circle(frame, pos, 5, (0, 255, 0), -1)\n",
+    "                cv2.circle(frame, pos, 16, (0, 255, 0), -1)\n",
     "            for pos in right_wrist_positions:\n",
-    "                cv2.circle(frame, pos, 5, (0, 255, 0), -1)\n",
+    "                cv2.circle(frame, pos, 16, (0, 255, 0), -1)\n",
     "\n",
     "            # Draw lines between wrist positions\n",
     "            for i in range(1, len(left_wrist_positions)):\n",
-    "                cv2.line(frame, left_wrist_positions[i - 1], left_wrist_positions[i], (0, 255, 0), 32)\n",
+    "                cv2.line(frame, left_wrist_positions[i - 1], left_wrist_positions[i], (0, 255, 0), 12)\n",
     "            for i in range(1, len(right_wrist_positions)):\n",
-    "                cv2.line(frame, right_wrist_positions[i - 1], right_wrist_positions[i], (0, 255, 0), 32)\n",
+    "                cv2.line(frame, right_wrist_positions[i - 1], right_wrist_positions[i], (0, 255, 0), 12)\n",
+    "\n",
+    "    # Flip the frame horizontally to correct the mirror effect\n",
+    "    flipped_frame = cv2.flip(frame, 1)\n",
     "\n",
     "    # Display the frame\n",
-    "    cv2.imshow('Wrist Tracking', frame)\n",
+    "    cv2.imshow('Wrist Tracking', flipped_frame)\n",
     "\n",
     "    # Check if 'c' is pressed to capture and save the image\n",
     "    key = cv2.waitKey(1)\n",
-    "    if key & 0xFF == ord('c'):\n",
+    "    if key & 0xFF == ord('s'):\n",
     "        capture_image = True\n",
     "\n",
     "    # Break the loop when 'q' is pressed and release the resources\n",
     "    if key & 0xFF == ord('q'):\n",
     "        break\n",
+    "\n",
+    "    if key & 0xFF == ord('c'):\n",
+    "        left_wrist_positions = []\n",
+    "        right_wrist_positions = []\n",
     "\n",
     "    # If capture_image is True, save the frame as an image\n",
     "    if capture_image:\n",
