First test done, we have some issues on some words like S,O,T,L and We will work on them more when writing the paper

--- a/Handwriting recognition by wrist/capture_image_with_finger.ipynb
+++ b/Handwriting recognition by wrist/capture_image_with_finger.ipynb
@@ -152,9 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lines captured and saved on the desktop!\n",
+      "Lines captured and saved on the desktop!\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import mediapipe as mp\n",
@@ -195,11 +204,11 @@
     "\n",
     "    # Draw lines between consecutive bullet points\n",
     "    for i in range(1, len(bullet_points)):\n",
-    "        cv2.line(frame, bullet_points[i - 1], bullet_points[i], (255, 0, 0), 8)\n",
+    "        cv2.line(frame, bullet_points[i - 1], bullet_points[i], (255, 0, 0), 16)\n",
     "\n",
     "    # Draw bullet points on the frame\n",
     "    for bullet_point in bullet_points:\n",
-    "        cv2.circle(frame, bullet_point, 12, (0, 255, 0), -1)\n",
+    "        cv2.circle(frame, bullet_point, 20, (0, 255, 0), -1)\n",
     "\n",
     "    # Flip the frame horizontally to correct the mirror effect\n",
     "    flipped_frame = cv2.flip(frame, 1)\n",
@@ -222,13 +231,13 @@
     "\n",
     "        # Draw the lines on the blank image\n",
     "        for i in range(1, len(bullet_points)):\n",
-    "            cv2.line(blank_image, bullet_points[i - 1], bullet_points[i], (0, 0, 0), 2)\n",
+    "            cv2.line(blank_image, bullet_points[i - 1], bullet_points[i], (0, 0, 0), 150)\n",
     "\n",
     "        non_white_pixels = np.where(np.any(blank_image != 255, axis=-1))\n",
     "\n",
     "        min_y, max_y = non_white_pixels[0].min(), non_white_pixels[0].max()\n",
     "        min_x, max_x = non_white_pixels[1].min(), non_white_pixels[1].max()\n",
-    "        cropped_image = blank_image[min_y:max_y + 1, min_x:max_x + 1]\n",
+    "        cropped_image = cv2.flip(blank_image[min_y:max_y + 1, min_x:max_x + 1], 1)\n",
     "\n",
     "        timestamp = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
