--- a/Handwriting recognition by wrist/capture_image_with_wrist.ipynb
+++ b/Handwriting recognition by wrist/capture_image_with_wrist.ipynb
@@ -414,7 +414,7 @@
     "        # Crop the image to the non-white pixel region\n",
     "        min_y, max_y = non_white_pixels[0].min(), non_white_pixels[0].max()\n",
     "        min_x, max_x = non_white_pixels[1].min(), non_white_pixels[1].max()\n",
-    "        cropped_image = blank_image[min_y:max_y+1, min_x:max_x+1]\n",
+    "        cropped_image = cv2.flip(blank_image[min_y:max_y+1, min_x:max_x+1] , 1)\n",
     "\n",
     "        # Generate a timestamp for the filename\n",
     "        timestamp = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
